
[project]
name = "sentieon_cli"
version = "1.5.1"
description = "entry point for sentieon command-line tools"
authors = [
    {name = "Don Freed", email = "don.freed@sentieon.com"},
    {name = "Brent", email = "bpederse@gmail.com"},
]
readme = "README.md"
requires-python = ">= 3.8"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
]
include = ["LICENSE"]

dependencies = [
    "colorlog (>=6.7.0,<7.0.0)",
    "importlib-resources (>=5.0,<6.0)",
    "packaging (>=23.2,<26.0)",
]

[project.scripts]
sentieon-cli = "sentieon_cli:main"

[tool.mypy]
ignore_missing_imports = true

[tool.black]
line-length = 79

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "*"
flake8 = "*"
mypy = "*"

[tool.poetry.group.test.dependencies]
pytest = "^7.0.0"
black = "*"
mypy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
