
[project]
name = "sentieon_cli"
version = "1.6.1"
description = "Pipeline implementations for the Sentieon software"
authors = [
    {name = "Don Freed", email = "don.freed@sentieon.com"},
    {name = "Brent", email = "bpederse@gmail.com"},
]
readme = "README.md"
requires-python = ">= 3.11"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
]
include = ["LICENSE"]

dependencies = [
    "packaging (>=23.2)",
    "mappy (>=2.30,<3.0)",
    "vcflib (>=1.0.1,<2.0.0)",
    "levenshtein (>=0.27.3,<0.28.0)",
]

[project.scripts]
sentieon-cli = "sentieon_cli:main"

[tool.mypy]
ignore_missing_imports = true

[tool.black]
line-length = 79

[tool.flake8]
max-line-length = 79
extend-ignore = ["E231", "E221"]
exclude = [
    ".github/scripts/license_message.py",
    "sentieon_cli/scripts/combine_cnv.py",
    "sentieon_cli/scripts/gvcf_combine.py",
    "sentieon_cli/scripts/vcf_mod.py",
    "sentieon_cli/scripts/hybrid_anno.py",
    "sentieon_cli/scripts/hybrid_select.py",
    "sentieon_cli/scripts/indel2cnv.py",
    "sentieon_cli/scripts/trimalt.py",
    "sentieon_cli/archive.py",
    "playground",
    "tests",
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = ">=0.21.0"
black = "*"
flake8 = "*"
Flake8-pyproject = "*"
mypy = "*"

[tool.poetry.group.test.dependencies]
pytest = "^7.0.0"
pytest-asyncio = ">=0.21.0"
black = "*"
mypy = "*"

# Dependencies that ship only in the container image (see Dockerfile).
# Not installed by `pip install sentieon-cli` from PyPI.
[tool.poetry.group.container]
optional = true

[tool.poetry.group.container.dependencies]
# multiqc 1.33 explicitly excludes cp3.14.1; marker keeps resolver happy.
multiqc = { version = "1.33", python = "!=3.14.1" }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
